@@ -1,5 +1,11 @@
 2012-05-31 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
+	* include/graphs/functions_pchart.php
+	 include/graphs/pChart/pDraw.class.php: Graphs with all data equal 
+	 to zero are displayed correctly.
+
+2012-05-31 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
 	* godmode/reporting/reporting_builder.php: Fixed error updating 
 	report items (agent and module were lost if you update item report).
 
